# front-new-life

anti-counterfeit-backend/: .env  docker-compose.yaml
anti-counterfeit-backend/crates/api/: Cargo.toml  README.md
anti-counterfeit-backend/crates/api/src/: config.rs  lib.rs  main.rs
anti-counterfeit-backend/crates/api/src/app/: admin.rs
anti-counterfeit-backend/crates/api/src/modules/: mod.rs
anti-counterfeit-backend/crates/api/src/modules/scan_tokens/application/: scan_tokens.rs
anti-counterfeit-backend/crates/api/src/modules/scan_tokens/domain/: entities.rs
anti-counterfeit-backend/crates/api/src/modules/tags/application/: verify.rs
anti-counterfeit-backend/crates/api/tests/: scan_tokens_routes.rs
anti-counterfeit-backend/crates/database-migration/: Cargo.toml
anti-counterfeit-backend/crates/database-model/src/: scan_event.rs  scan_token.rs  token_batch.rs
backend/: .env  .env.example  Cargo.toml  Dockerfile  docker-compose.yaml
backend/crates/api/: Cargo.toml  README.md
backend/crates/api/src/: config.rs  db.rs  lib.rs  main.rs
backend/crates/api/src/app/: error.rs  http.rs  http_error.rs  mod.rs
backend/crates/api/src/location/: continent_enum.rs  country_enum.rs  mod.rs  region_enum.rs
backend/crates/api/src/location/domain/: country_enum.rs  thoroughfare_enum.rs
backend/crates/api/src/location/domain/models/: address.rs
backend/crates/api/src/location/models/: address.rs
backend/crates/api/src/modules/scan_tokens/application/: mod.rs  ports.rs
backend/crates/api/src/modules/scan_tokens/infrastructure/crypto/: hmac_scan_token.rs  mod.rs
backend/crates/api/src/modules/scan_tokens/infrastructure/persistence/: mod.rs  sea_orm_repo.rs
backend/crates/api/src/modules/scan_tokens/infrastructure/web/: dtos.rs  handlers.rs
backend/crates/api/src/modules/tags/application/: admin.rs  mod.rs  ports.rs  provision.rs
backend/crates/api/src/modules/tags/domain/: entities.rs
backend/crates/api/src/modules/tags/infrastructure/: mod.rs
backend/crates/api/src/modules/tags/infrastructure/crypto/: aes_cmac.rs  mod.rs
backend/crates/api/src/modules/tags/infrastructure/persistence/: sea_orm_repo.rs
backend/crates/api/src/modules/tags/infrastructure/web/: dtos.rs  handlers.rs
backend/crates/api/src/person/: mod.rs  person_type_enum.rs
backend/crates/api/src/person/model/: person.rs
backend/crates/api/src/person/models/: person.rs
backend/crates/database-migration/: Cargo.toml  README.md
backend/crates/database-model/: Cargo.toml  README.md
backend/crates/database-model/src/: audit_event.rs  item.rs  lib.rs  tag.rs
backend/docs/: ARCHITECTURE_AUDIT.md  HOW_TO_TEST.md
