[workspace]
members = ["crates/api", "crates/database-migration", "crates/database-model"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
sea-orm-migration = { version = "1.1", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum = { version = "0.8.4", features = [] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
dotenvy = { version = "0.15.7", features = [] }
jsonwebtoken = { version = "9.3.1", features = [] }
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
argon2 = { version = "0.5.3", features = [] }
chrono = { version = "0.4.41", features = [] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = { version = "2.0.16", features = [] }
aes = { version = "0.8.0", features = [] }
cmac = { version = "0.7.0", features = [] }
hex = { version = "0.4.3", features = [] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
http = "1"
tracing = { version = "0.1.44", features = [] }
async-trait = { version = "0.1.77", features = [] }
base64 = { version = "0.22.1", features = [] }
hmac = { version = "0.12.1", features = [] }
sha2 = { version = "0.10.9", features = [] }
serde_json = { version = "1.0.140", features = [] }
tower = { version = "0.5.2", features = ["util"] }

[profile.dev]
debug = true
opt-level = 0


[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
unreachable_code = "deny"
unreachable_patterns = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_err = "deny"
indexing_slicing = "deny"
string_slice = "deny"
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
let_underscore_future = "deny"
let_underscore_lock = "deny"
mem_forget = "deny"
box_leak = "deny"
exit = "deny"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
wildcard_imports = "warn"
enum_glob_use = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"
result_large_err = "warn"
must_use_candidate = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
needless_borrow = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
result_unit_err = "deny"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
single_match_else = "warn"
