[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
aes = { workspace = true }
cmac = { workspace = true }
hex = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
database-model = { path = "../database-model" }
anyhow = "1"

[dev-dependencies]
tower = { workspace = true }

[lints]
workspace = true
