[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
sea-orm = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
database-model = { path = "../database-model" }
anyhow = "1"

[dev-dependencies]
tower = { workspace = true }

[lints]
workspace = true
